2002-10-17  John Harper  <jsh@unfactored.org>

	* sawfish/wm/state/wm-spec.jl: support some 1.1 features:
	_NET_WM_STATE_BELOW, _NET_WM_STATE_ABOVE, _NET_WM_TYPE_UTILITY,
	_NET_WM_TYPE_SPLASH, _NET_WM_TYPE_MENU, _NET_WM_TYPE_TOOLBAR.
	(Last two are actually 1.0)

	* sawfish/wm/frames.jl (frame-type-fallback-alist): added more
	types: utility, toolbar, menu, splash

	* sawfish/wm/windows.jl (mark-window-as-desktop,
	mark-window-as-dock): set more properties, including window
	depth and type

	* sawfish/wm/stacking.jl: exported window-depth function

2002-10-06  John Harper  <jsh@unfactored.org>

	* sawfish/wm/workspace.jl: don't add ``iconified'' as a
	workspace-local property, it's global by nature. Fixes #94530

2002-10-03  John Harper  <jsh@unfactored.org>

	* sawfish/wm/misc.jl (get-x-text-property,
	set-x-text-property): these functions now written in lisp so
	that they use the property cache

2002-09-29  John Harper  <jsh@unfactored.org>

	* sawfish/wm/state/configure.jl (configure-request-handler): fixed
	bug of not checking for locked dimensions before overwriting the
	dims variable. This fixes #88788

	* sawfish/wm/state/wm-spec.jl (_NET_WM_STATE_FULLSCREEN): fixed
	stupid bug I recently introduced stopping windows putting
	themselves into fullscreen mode

2002-09-28  John Harper  <jsh@unfactored.org>

	Work to fix #83431:

	* sawfish/wm/state/configure.jl (configure-request-handler):
	handle nil x or y components of `position' request.

	* sawfish/wm/windows.jl (adjust-position-for-gravity/x,
	adjust-position-for-gravity/y): new functions, factored out of
	adjust-position-for-gravity, which is now defined in terms of
	these two

2002-09-26  John Harper  <jsh@unfactored.org>

	* sawfish/wm/commands/grow-pack.jl (bump-distance): patch from
	Daniel Pfeiffer <occitan@esperanto.org> to fix bug "when two
	windows have the same size in the direction perpendicular to
	the pack"

2002-09-25  John Harper  <jsh@unfactored.org>
