@@ -1,3 +1,9 @@
+2002-10-18  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/state/wm-spec.jl (client-message-handler):
+	half-assed implementation of _MOVERESIZE_SIZE_KEYBOARD and
+	_MOVE_KEYBOARD. Fixes #95772
+
 2002-10-17  John Harper  <jsh@unfactored.org>
 
 	* sawfish/wm/state/wm-spec.jl: support some 1.1 features:
